Додав секцію та список переваг

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <a href="/index.html"> Web Studio </a>
 
         <ul>
-          <li><a href="/index.html">Студія</a></li>
+          <li><a href="./index.html">Студія</a></li>
           <li><a href="#">Портфоліо</a></li>
           <li><a href="#">Контакти</a></li>
         </ul>
@@ -24,5 +24,39 @@
         <li><a href="#">+38 096 111 11 11</a></li>
       </ul>
     </header>
+
+    <section>
+      <h1>Ефективні рішення для вашого бізнеса</h1>
+      <button type="submit">Замовити послугу</button>
+    </section>
+
+    <h2>Наши переваги</h2>
+    <ul>
+      <li>
+        <h3>Увага до деталей</h3>
+        <p>
+          Ідейні міркування, і навіть початок повсякденної роботи з формування
+          позиції.
+        </p>
+      </li>
+      <li>
+        <h3>Пунктуальність</h3>
+        <p>
+          Завдання організації, особливо рамки і місце навчання кадрів тягне у
+          себе.
+        </p>
+      </li>
+      <li>
+        <h3>Планування</h3>
+        <p>Так само консультація з широким активом значною мірою зумовлює.</p>
+      </li>
+      <li>
+        <h3>Сучасні технології</h3>
+        <p>
+          Значимість цих проблем настільки очевидна, що реалізація планових
+          завдань.
+        </p>
+      </li>
+    </ul>
   </body>
 </html>
