--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
 
   <body>
+    <!-- Шапка сайта -->
     <header>
       <nav>
         <a href="./index.html"> Web Studio </a>
@@ -25,85 +26,104 @@
       </ul>
     </header>
 
-    <section>
-      <h1>Ефективні рішення для вашого бізнеса</h1>
-      <button type="button">Замовити послугу</button>
-    </section>
+    <main>
+      <!-- Герой -->
+      <section>
+        <h1>Ефективні рішення для вашого бізнеса</h1>
+        <button type="button">Замовити послугу</button>
+      </section>
 
-    <section>
-      <h2 hidden>Наши переваги</h2>
-      <ul>
-        <li>
-          <h3>Увага до деталей</h3>
-          <p>
-            Ідейні міркування, і навіть початок повсякденної роботи з формування
-            позиції.
-          </p>
-        </li>
-        <li>
-          <h3>Пунктуальність</h3>
-          <p>
-            Завдання організації, особливо рамки і місце навчання кадрів тягне у
-            себе.
-          </p>
-        </li>
-        <li>
-          <h3>Планування</h3>
-          <p>Так само консультація з широким активом значною мірою зумовлює.</p>
-        </li>
-        <li>
-          <h3>Сучасні технології</h3>
-          <p>
-            Значимість цих проблем настільки очевидна, що реалізація планових
-            завдань.
-          </p>
-        </li>
-      </ul>
-    </section>
+      <!-- Переваги -->
+      <section>
+        <h2 hidden>Наши переваги</h2>
+        <ul>
+          <li>
+            <h3>Увага до деталей</h3>
+            <p>
+              Ідейні міркування, і навіть початок повсякденної роботи з
+              формування позиції.
+            </p>
+          </li>
+          <li>
+            <h3>Пунктуальність</h3>
+            <p>
+              Завдання організації, особливо рамки і місце навчання кадрів тягне
+              у себе.
+            </p>
+          </li>
+          <li>
+            <h3>Планування</h3>
+            <p>
+              Так само консультація з широким активом значною мірою зумовлює.
+            </p>
+          </li>
+          <li>
+            <h3>Сучасні технології</h3>
+            <p>
+              Значимість цих проблем настільки очевидна, що реалізація планових
+              завдань.
+            </p>
+          </li>
+        </ul>
+      </section>
 
-    <section>
-      <h3>Чим ми займаємося</h3>
-      <ul>
-        <li>
-          <img
-            src="./images/pict 1.jpg"
-            alt="Друкує на клавіатурі компьютера"
-            width="370"
-          />
-        </li>
-        <li>
-          <img src="./images/pict 2.jpg" alt="Працює з ноутбуком" width="370" />
-        </li>
-        <li>
-          <img src="./images/pict 3.jpg" alt="Малює на планшеті" width="370" />
-        </li>
-      </ul>
-    </section>
+      <!-- Що робимо -->
+      <section>
+        <h3>Чим ми займаємося</h3>
+        <ul>
+          <li>
+            <img
+              src="./images/pict 1.jpg"
+              alt="Друкує на клавіатурі компьютера"
+              width="370"
+            />
+          </li>
+          <li>
+            <img
+              src="./images/pict 2.jpg"
+              alt="Працює з ноутбуком"
+              width="370"
+            />
+          </li>
+          <li>
+            <img
+              src="./images/pict 3.jpg"
+              alt="Малює на планшеті"
+              width="370"
+            />
+          </li>
+        </ul>
+      </section>
 
-    <section>
-      <h3>Наша команда</h3>
-      <ul>
-        <li>
-          <img src="./images/photo 1.jpg" alt="Ігор" width="270" />
-          <h4>Ігор Дем'яненко</h4>
-          <p>Product Designer</p>
-        </li>
-        <li>
-          <img src="./images/photo 2.jpg" alt="Ольга" width="270" />
-          <h4>Ольга Рєпіна</h4>
-          <p>Frontend Developer</p>
-        </li>
-        <li>
-          <img src="./images/photo 1.jpg" alt="Микола" width="270" />
-          <h4>Микола Тарасов</h4>
-          <p>Marketing</p>
-        </li>
-        <li>
-          <img src="./images/photo 1.jpg" alt="Михайло" width="270" />
-          <h4>Михайло Єрмаков</h4>
-          <p>UI Designer</p>
-        </li>
-      </ul>
-    </section>
+      <!-- Наша команда -->
+      <section>
+        <h3>Наша команда</h3>
+        <ul>
+          <li>
+            <img src="./images/photo 1.jpg" alt="Ігор" width="270" />
+            <h3>Ігор Дем'яненко</h3>
+            <p>Product Designer</p>
+          </li>
+          <li>
+            <img src="./images/photo 2.jpg" alt="Ольга" width="270" />
+            <h3>Ольга Рєпіна</h3>
+            <p>Frontend Developer</p>
+          </li>
+          <li>
+            <img src="./images/photo 3.jpg" alt="Микола" width="270" />
+            <h3>Микола Тарасов</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img src="./images/photo 4.jpg" alt="Михайло" width="270" />
+            <h3>Михайло Єрмаков</h3>
+            <p>UI Designer</p>
+          </li>
+        </ul>
+      </section>
+    </main>
+
+    <!-- Футер -->
+    <footer></footer>
   </body>
 </html>
