--- a/index.html
+++ b/index.html
@@ -73,24 +73,20 @@
         <ul>
           <li>
             <img
-              src="./images/pict 1.jpg"
+              src="./images/pict1.jpg"
               alt="Друкує на клавіатурі компьютера"
               width="370"
             />
           </li>
           <li>
             <img
-              src="./images/pict 2.jpg"
+              src="./images/pict2.jpg"
               alt="Працює з ноутбуком"
               width="370"
             />
           </li>
           <li>
-            <img
-              src="./images/pict 3.jpg"
-              alt="Малює на планшеті"
-              width="370"
-            />
+            <img src="./images/pict3.jpg" alt="Малює на планшеті" width="370" />
           </li>
         </ul>
       </section>
@@ -100,22 +96,22 @@
         <h3>Наша команда</h3>
         <ul>
           <li>
-            <img src="./images/photo 1.jpg" alt="Ігор" width="270" />
+            <img src="./images/photo1.jpg" alt="Ігор" width="270" />
             <h3>Ігор Дем'яненко</h3>
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="./images/photo 2.jpg" alt="Ольга" width="270" />
+            <img src="./images/photo2.jpg" alt="Ольга" width="270" />
             <h3>Ольга Рєпіна</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
-            <img src="./images/photo 3.jpg" alt="Микола" width="270" />
+            <img src="./images/photo3.jpg" alt="Микола" width="270" />
             <h3>Микола Тарасов</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="./images/photo 4.jpg" alt="Михайло" width="270" />
+            <img src="./images/photo4.jpg" alt="Михайло" width="270" />
             <h3>Михайло Єрмаков</h3>
             <p>UI Designer</p>
           </li>
@@ -124,6 +120,27 @@
     </main>
 
     <!-- Футер -->
-    <footer></footer>
+    <footer>
+      <a href="./index.html"> Web Studio </a>
+      <address>
+        <a
+          href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
+          target="_blank"
+          rel="noopener noreferrer nofollow"
+        >
+          <p>м. Київ, пр-т Лесі Українки, 26</p>
+        </a>
+      </address>
+      <address>
+        <ul>
+          <li>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li>
+            <a href="tel:+380961111111">(096) 111-11-11</a>
+          </li>
+        </ul>
+      </address>
+    </footer>
   </body>
 </html>
