Виправив помилки від ментора

--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
   <body>
     <!-- Шапка сайта -->
     <header>
-      <nav>
+      <p>
         <a href="./index.html"> Web Studio </a>
+      </p>
 
+      <nav>
         <ul>
           <li><a href="./index.html">Студія</a></li>
           <li><a href="#">Портфоліо</a></li>
@@ -21,8 +23,8 @@
       </nav>
 
       <ul>
-        <li><a href="#">info@devstudio.com</a></li>
-        <li><a href="#">+38 096 111 11 11</a></li>
+        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
     </header>
 
@@ -69,7 +71,7 @@
 
       <!-- Що робимо -->
       <section>
-        <h3>Чим ми займаємося</h3>
+        <h2>Чим ми займаємося</h2>
         <ul>
           <li>
             <img
@@ -93,7 +95,7 @@
 
       <!-- Наша команда -->
       <section>
-        <h3>Наша команда</h3>
+        <h2>Наша команда</h2>
         <ul>
           <li>
             <img src="./images/photo1.jpg" alt="Ігор" width="270" />
@@ -122,17 +124,18 @@
     <!-- Футер -->
     <footer>
       <a href="./index.html"> Web Studio </a>
-      <address>
-        <a
-          href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
-          target="_blank"
-          rel="noopener noreferrer nofollow"
-        >
-          <p>м. Київ, пр-т Лесі Українки, 26</p>
-        </a>
-      </address>
+
       <address>
         <ul>
+          <li>
+            <a
+              href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
+              target="_blank"
+              rel="noopener noreferrer nofollow"
+            >
+              м. Київ, пр-т Лесі Українки, 26</a
+            >
+          </li>
           <li>
             <a href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
